@@ -8,6 +8,8 @@ Release Notes
 trunk
 --------------
 
+- Add I3ShowerBias for biased CORSIKA shower generation
+
 Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
 -------------------------------------------
 Combo Release V00-00-00
